Fix: margins on index.html images and social links

--- a/404.html
+++ b/404.html
@@ -17,15 +17,15 @@
 </head>
 <body>
     <header>
-        <header class="container">
+        <div class="container">
             <div class="header">    
                 <div class="row">
                     <div class="col-12">
                         <div>
                             <h1 class="title">Oops..... Page Not Found<span>                        
-                            <img class="logo-img" src="assets/images/jigsaw_piece.png"
+                                <a href="index.html"><img class="logo-img" src="assets/images/jigsaw_piece.png"
                                 alt="Autism Jigsaw Logo"
-                            aria-label="Multicoloured Jigsaw piece."></span></h1>
+                            aria-label="Multicoloured Jigsaw piece."></a></span></h1>
                         </div>
                     </div> 
                 </div>
@@ -39,7 +39,7 @@
                     </div>
                 </div>    
             </div>
-            </header>
+        </div>
     </header>
 
 <!-- start of content -->
@@ -66,7 +66,7 @@
 <!-- No footer as this is an error page -->
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>    
-    <script type="text/javascript" src="assets/js/scripts.js"></script>
+    <script src="assets/js/scripts.js"></script>
     <script src="https://kit.fontawesome.com/6e6c671d1b.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 </body>
