--- a/quiz.html
+++ b/quiz.html
@@ -22,9 +22,9 @@
             <div class="col-12">
                 <div>
                     <h1 class="title">The Great Quiz<span>                        
-                    <img class="logo-img" src="assets/images/jigsaw_piece.png"
+                        <a href="index.html"><img class="logo-img" src="assets/images/jigsaw_piece.png"
                         alt="Autism Jigsaw Logo"
-                    aria-label="Multicoloured Jigsaw piece."></span></h1>
+                    aria-label="Multicoloured Jigsaw piece."></a></span></h1>
                 </div>
             </div> 
         </div>
