--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="col-12">
                 <div>
                     <h1 class="title">All About Autism<span>                        
-                    <img class="logo-img" src="assets/images/infinity_logo.png"
+                        <img class="logo-img" src="assets/images/infinity_logo.png"
                         alt="Autism infinity Logo"
                     aria-label="Multicoloured infinity figure of 8 logo."></span></h1>
                 </div>
@@ -86,8 +86,8 @@
                 </div>
                 <div class="col-md-8 col-sm-10 col-xl-6">
                 <p>
-                    There is no cure and diagnosis isn't a fix but it does help to identify 
-                    triggers, can provide coping strategies and may explain what may have thus far been the unexplainable in your life.
+                    There is no cure and, diagnosis isn't a fix but it does help to identify 
+                    triggers, can provide coping strategies and helps explain what may have thus far been the unexplainable in your life.
                 </p>
                 </div>
             </div>
@@ -101,7 +101,7 @@
                 </div>
                 <div class="col-sm-10 col-md-8 col-lg-6">
                     <button class="btn btn-block btn-icon" type="button"
-                    data-target="#autism1" aria-expanded="false" aria-controls="autism">
+                    data-target="#autism1" aria-expanded="false">
                     The Autistic Spectrum</button>
                     <div class="content-hidden" id="autism1">  
                         <p>
@@ -124,16 +124,16 @@
                 <div class="col-sm-1 col-md-2 col-lg-3">
                 </div>
                 <div class="col-sm-10 col-md-8 col-lg-6">
-                    <button class="btn btn-block btn-icon" type="button" data-toggle="collapse"
-                    data-target="#autism2" aria-expanded="false" aria-controls="autism">
+                    <button class="btn btn-block btn-icon" type="button"
+                    data-target="#autism2" aria-expanded="false">
                     Spectrum Versus Disorder</button>
                     <div class="content-hidden" id="autism2">
                         <p>
                             Spectrum is often replaced by constellation as spectrum implies a degree of severity across all difficulties when in fact a person may be
                              quite challenged in one area but excel in another.
                         </p>
-                        <p>
-                            <img class="img img-responsive" src="assets/images/neurodiversity.png"
+                        <p class="center-text">
+                            <img class="img-reduce img-responsive" src="assets/images/neurodiversity.png"
                             alt="Autism neurodiversoty Logo"
                             aria-label="Multicoloured infinity figure with the title neurodiversity.">
                         </p>
@@ -148,8 +148,8 @@
                 <div class="col-sm-1 col-md-2 col-lg-3">
                 </div>
                 <div class="col-sm-10 col-md-8 col-lg-6">                           
-                    <button class="btn btn-block btn-icon" type="button" data-toggle="collapse"
-                        data-target="#autism3" aria-expanded="false" aria-controls="autism">
+                    <button class="btn btn-block btn-icon" type="button"
+                        data-target="#autism3" aria-expanded="false">
                         High & Low Functioning</button>        
                         <div class="content-hidden" id="autism3">
                             <div>
@@ -173,8 +173,8 @@
                 <div class="col-sm-1 col-md-2 col-lg-3">
                 </div>
                 <div class="col-sm-10 col-md-8 col-lg-6">                          
-                    <button class="btn btn-block btn-icon" type="button" data-toggle="collapse"
-                    data-target="#autism4" aria-expanded="false" aria-controls="autism">
+                    <button class="btn btn-block btn-icon" type="button"
+                    data-target="#autism4" aria-expanded="false">
                     So, To Aspergers or ...</button>
                     <div class="content-hidden" id="autism4"> 
                         <div>
@@ -185,8 +185,8 @@
                                 There are myths around Asperger’s that stem from the original decisions by Hans Asperger, who chose to separate the intelligent from the not-so intelligent.
                                  (The Nazi government funded and directed him, and that’s a whole other story and a reason many now avoid the term altogether.)
                             </p>
-                            <p>
-                                <img class="img img-responsive" src="assets/images/batman.png"
+                            <p class="center-text">
+                                <img class="img-reduce img-responsive" src="assets/images/batman.png"
                                 alt="batman symbol"
                                 aria-label="batman symbol in autism colors.">
                             </p>
@@ -205,8 +205,8 @@
                 <div class="col-sm-1 col-md-2 col-lg-3">
                 </div>
                 <div class="col-sm-10 col-md-8 col-lg-6">
-                    <button class="btn btn-block btn-icon" type="button" data-toggle="collapse"
-                     data-target="#autism5" aria-expanded="false" aria-controls="autism">
+                    <button class="btn btn-block btn-icon" type="button"
+                     data-target="#autism5" aria-expanded="false">
                      I'm an individual, and..</button>
                     <div class="content-hidden" id="autism5">
                             <div>
@@ -216,8 +216,8 @@
                                 <p>
                                     We are all different, and function differently on a daily basis.
                                 </p>
-                                <p>
-                                    <img class="img img-responsive" src="assets/images/montage.jpg"
+                                <p class="center-text">
+                                    <img class="img-reduce img-responsive" src="assets/images/montage.jpg"
                                     alt="montage of 3 people"
                                     aria-label="montage of 3 famous autistic peopele. einstenin jobs.">
                                 </p>
@@ -233,8 +233,8 @@
                 <div class="col-sm-1 col-md-2 col-lg-3">
                 </div>
                 <div class="col-sm-10 col-md-8 col-lg-6">
-                    <button class="btn btn-block btn-icon" type="button" data-toggle="collapse"
-                    data-target="#autism6" aria-expanded="false" aria-controls="autism">
+                    <button class="btn btn-block btn-icon" type="button"
+                    data-target="#autism6" aria-expanded="false">
                     Hunting High and Low..</button>
                     <div class="content-hidden" id="autism6">
                             <div>
@@ -242,8 +242,8 @@
                                 There are no separate High Functioning and Low Functioning people. Asperger’s and Autism are indistinguishable from each other, and so are the same.
                                  There is no mild Autism, or severe Autism; there is only Autism and the ability of the individual to prevent societal norms from crippling them.
                             </p>
-                            <p>
-                                <img class="img img-responsive" src="assets/images/Func_labels.png"
+                            <p class="center-text">
+                                <img class="img-small img-responsive" src="assets/images/Func_labels.png"
                                 alt="functional label Logo"
                                 aria-label="Image identifying the unhelpfuless of functional labels.">
                             </p>
@@ -259,8 +259,8 @@
                 <div class="col-sm-1 col-md-2 col-lg-3">
                 </div>
                 <div class="col-sm-10 col-md-8 col-lg-6">
-                    <button class="btn btn-block btn-icon" type="button" data-toggle="collapse"
-                    data-target="#autism7" aria-expanded="false" aria-controls="autism">
+                    <button class="btn btn-block btn-icon" type="button"
+                    data-target="#autism7" aria-expanded="false">
                     When you've met one ..</button>
                     <div class="content-hidden" id="autism7">
                         <div>
@@ -288,8 +288,8 @@
                 <div class="col-sm-1 col-md-2 col-lg-3">
                 </div>
                 <div class="col-sm-10 col-md-8 col-lg-6">
-                    <button class="btn btn-block btn-icon" type="button" data-toggle="collapse"
-                    data-target="#autism8" aria-expanded="false" aria-controls="autism">
+                    <button class="btn btn-block btn-icon" type="button"
+                    data-target="#autism8" aria-expanded="false">
                     Chase the Rainbow...</button>
                     <div class="content-hidden" id="autism8">
                             <div>
@@ -297,8 +297,8 @@
                                 The puzzle pattern represents the complexity of the autism spectrum, and the use of primary colours symbolises
                                  the diversity of people living with autism and their families.
                             </p>
-                            <p>
-                                <img class="img img-responsive" src="assets/images/missing _piece.png"
+                            <p class="center-text">
+                                <img class="img-narrow img-responsive" src="assets/images/missing_piece.png"
                                 alt="missing piece logo"
                                 aria-label="protest logo stating we were never missing pieces.">
                             </p>
@@ -310,10 +310,49 @@
                     </div>
                 </div>
             </div> 
-        </div>             
+            <div class="row no-gutters section-details">        
+                <div class="col-sm-1 col-md-2 col-lg-3">
+                </div>
+                <div class="col-sm-10 col-md-8 col-lg-6">
+                    <button class="btn btn-block btn-icon" type="button"
+                    data-target="#autism9" aria-expanded="false">
+                    I stim, You stim...</button>
+                    <div class="content-hidden" id="autism9">
+                            <div>
+                            <p class="center-text">
+                                ....We all stim together.
+                            </p>    
+                            <p>
+                                Stimming or self-stimulating behaviour includes arm or hand-flapping,
+                                 finger-flicking, rocking, jumping, spinning or twirling, humming, head-banging and complex body movements.
+                                  Almost always present in Autism, but we all do it; just to a lesser extent.
+                            </p>
+                            <p class="center-text">
+                                <img class="img-reduce img-responsive" src="assets/images/stim.png"
+                                alt="stim logo"
+                                aria-label="graphic of 6 examples of stimming">
+                            </p>
+                            <p>
+                                So, this is one of the common misconceptions about stimming, that it is solely associated with autism.
+                                Stimming behaviors can be, and are, present in individuals without autism as well. 
+                                It is crucial to challenge this stereotype and recognize that stimming is a natural
+                                 and diverse form of self-expression, self-regulation and helps to calm the individual.
+                            </p>
+                            </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row no-gutters section-details">        
+                <div class="col-sm-1 col-md-2 col-lg-3">
+                </div>
+                <div class="col-sm-10 col-md-8 col-lg-6">
+                    <br>
+                    <div class="solid-border">
+                    </div> 
+                </div>             
+            </div>
         </div>
-    <!-- end of main data - now summarise -->
-        <div class="container-fluid">
+    <!-- end of main content - now summarise -->
             <div class="row no-gutters section-details">  
                 <br>
                 <div class="col-md-2 col-sm-1 col-xl-3">
@@ -380,7 +419,7 @@
     </footer>
 <!-- JavaScript Scripts  -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>    
-    <script type="text/javascript" src="assets/js/scripts.js"></script>
+    <script src="assets/js/scripts.js"></script>
     <script src="https://kit.fontawesome.com/6e6c671d1b.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 </body>
