--- a/myth.html
+++ b/myth.html
@@ -22,9 +22,9 @@
             <div class="col-12">
                 <div>
                     <h1 class="title">Truth or Myth?<span>                        
-                    <img class="logo-img" src="assets/images/butterfly.png"
+                        <a href="index.html"><img class="logo-img" src="assets/images/butterfly.png"
                         alt="Autism butterfly Logo"
-                    aria-label="Multicoloured butterfly in jigsaw pieces."></span></h1>
+                    aria-label="Multicoloured butterfly in jigsaw pieces."></a></span></h1>
                 </div>
             </div> 
         </div>
