Fix: correct margins on myths cards on smaller screens

--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
                             Autism is a spectrum condition and affects people in different ways. Like all people, autistic people have their own strengths and weaknesses. 
                             The definition of Autism has changed over time and continues to change.
                         </p>
+                        <p class="center-text">
+                            <img class="img-reduce img-responsive" src="assets/images/asd-mod.png"
+                            alt="asd spectrum"
+                            aria-label="autism spectrum disorder spectrum rainbow with categories.">
                         <p>
                             It has been more than 50 years since <a href="https://en.wikipedia.org/wiki/Leo_Kanner">Leo Kanner</a> first described his classic autistic syndrome.
                             Since then, the results of research and clinical work have helped us learn more about autism.
@@ -160,6 +164,11 @@
                                 <p>
                                     The only clinical difference between Autism and Asperger’s is speech delay around speech milestones,
                                      and that does not necessarily mean mutism or selective mutism—it could literally mean partly delayed speech.
+                                </p>
+                                <p class="center-text">
+                                    <img class="img-small img-responsive" src="assets/images/high-low-mod.png"
+                                    alt="high low graph"
+                                    aria-label="Image identifying high and low traits and public perception.">
                                 </p>
                                 <p>
                                     The two are inseparable past that point, because they are essentially the same thing.
