--- a/myth.html
+++ b/myth.html
@@ -134,7 +134,7 @@
                         </ul>
                         </p>
                         <p class="center-text">
-                            Why not check out the top 12 myths about Autism below. 
+                            Why not check out the top 10 myths about Autism below. 
                             Click on a myth to flip it and learn the truth. 
                         </p>
                         <br>
@@ -142,13 +142,13 @@
                 </div>
             </div>
     <!-- start of main page content -->
-     <!-- first 3 entries -->
+    <!-- first 2 entries -->
             <div class="container-fluid">
                 <div class="row no-gutters section-details">        
-                    <div class="col-md-1-half">
+                    <div class="col-lg-2 col-md-2 col-sm-2">
                     </div>
-                    <div class="col-md-3">
-                        <div class="row"> 
+                    <div class="col-md-4">
+                        <div class="row no gutters"> 
                             <div class="myth-card">
                                 <div class="myth-card-inner">
                                   <div class="myth-card-front">
@@ -167,8 +167,8 @@
                               </div>   
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="row">
+                    <div class="col-md-4">
+                        <div class="row no margin">
                             <div class="myth-card">
                                 <div class="myth-card-inner">
                                   <div class="myth-card-front">
@@ -186,8 +186,15 @@
                                 </div>
                               </div>
                         </div>
+                    </div>                           
+                </div>            
+            </div> 
+    <!-- next 2 entries --> 
+            <div class="container-fluid">
+                <div class="row no-gutters section-details">        
+                    <div class="col-lg-2">
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-lg-4">
                         <div class="row">
                             <div class="myth-card">
                                 <div class="myth-card-inner">
@@ -206,15 +213,8 @@
                                 </div>
                             </div>
                         </div> 
-                    </div>                           
-                </div>            
-            </div> 
-            <!-- next 3 entries -->
-            <div class="container-fluid">
-                <div class="row no-gutters section-details">        
-                    <div class="col-md-1-half">
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-lg-4">
                         <div class="row">
                             <div class="myth-card">
                                 <div class="myth-card-inner">
@@ -233,8 +233,15 @@
                                 </div>
                               </div>
                         </div>
+                    </div>                           
+                </div>            
+            </div>
+    <!-- next 2 entries -->
+            <div class="container-fluid">
+                <div class="row no-gutters section-details">        
+                    <div class="col-lg-2">
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-lg-4">
                         <div class="row">
                             <div class="myth-card">
                                 <div class="myth-card-inner">
@@ -254,7 +261,7 @@
                               </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-lg-4">
                         <div class="row">
                             <div class="myth-card">
                                 <div class="myth-card-inner">
@@ -276,12 +283,12 @@
                     </div>                          
                 </div>            
             </div> 
-            <!-- last 3 entries -->
+    <!-- next 2 entries -->
             <div class="container-fluid">
                 <div class="row no-gutters section-details">        
-                    <div class="col-md-1-half">
+                    <div class="col-lg-2">
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-lg-4">
                         <div class="row">
                             <div class="myth-card">
                                 <div class="myth-card-inner">
@@ -301,7 +308,7 @@
                               </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-lg-4">
                         <div class="row">
                             <div class="myth-card">
                                 <div class="myth-card-inner">
@@ -320,8 +327,15 @@
                                 </div>
                               </div>
                         </div>
+                    </div>                         
+                </div>            
+            </div> 
+    <!-- last 2 entries -->
+            <div class="container-fluid">
+                <div class="row no-gutters section-details">        
+                    <div class="col-lg-2">
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-lg-4">
                         <div class="row">
                             <div class="myth-card">
                                 <div class="myth-card-inner">
@@ -333,21 +347,15 @@
                                   </div>
                                   <div class="myth-card-back">
                                     <br>
-                                    <h1>myth9</h1> 
+                                    <h1>myth 9</h1> 
                                     <p>this is the truth</p> 
                                     <p>honest guv</p>
                                   </div>
                                 </div>
                               </div>
                         </div>
-                    </div>                          
-                </div>            
-            </div> 
-            <div class="container-fluid">
-                <div class="row no-gutters section-details">        
-                    <div class="col-md-1-half">
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-lg-4">
                         <div class="row">
                             <div class="myth-card">
                                 <div class="myth-card-inner">
@@ -366,47 +374,7 @@
                                 </div>
                               </div>
                         </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="row">
-                            <div class="myth-card">
-                                <div class="myth-card-inner">
-                                  <div class="myth-card-front">
-                                    <br>
-                                    <h1>myth 11</h1> 
-                                    <p>flip the card</p> 
-                                    <p>to see the truth</p>
-                                  </div>
-                                  <div class="myth-card-back">
-                                    <br>
-                                    <h1>myth11</h1> 
-                                    <p>this is the truth</p> 
-                                    <p>honest guv</p>
-                                  </div>
-                                </div>
-                              </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="row">
-                            <div class="myth-card">
-                                <div class="myth-card-inner">
-                                  <div class="myth-card-front">
-                                    <br>
-                                    <h1>myth 12</h1> 
-                                    <p>flip the card</p> 
-                                    <p>to see the truth</p>
-                                  </div>
-                                  <div class="myth-card-back">
-                                    <br>
-                                    <h1>myth12</h1> 
-                                    <p>this is the truth</p> 
-                                    <p>honest guv</p>
-                                  </div>
-                                </div>
-                              </div>
-                        </div>
-                    </div>                          
+                    </div>     
                 </div>            
             </div> 
     <!-- end of main data - now summarise -->
