eat: add graphics and text to myth cards

--- a/myth.html
+++ b/myth.html
@@ -145,19 +145,23 @@
     <!-- first 2 entries -->
             <div class="container-fluid">
                 <div class="row no-gutters section-details">        
-                    <div class="col-lg-2 col-md-2 col-sm-2">
+                    <div class="col-lg-1 col-md-1 col-sm-3">
                     </div>
-                    <div class="col-md-4">
-                        <div class="row no gutters"> 
+                    <div class="col-md-5">
+                        <div class="row"> 
                             <div class="myth-card">
                                 <div class="myth-card-inner">
-                                  <div class="myth-card-front">
+                                    <div class="myth-card-front">
                                     <br>
-                                    <h1>myth 1</h1> 
-                                    <p>flip the card</p> 
-                                    <p>to see the truth</p>
-                                  </div>
-                                  <div class="myth-card-back">
+                                    <h1>Autism is a disease?</h1> 
+                                    <br>
+                                    <p class="center-text">
+                                        <img class="img-myth img-responsive" src="assets/images/disease.jpg"
+                                        alt="image of microbes"
+                                        aria-label="Multicoloured image of microbes">
+                                    </p>  
+                                    </div>
+                                    <div class="myth-card-back">
                                     <br>
                                     <h1>myth1</h1> 
                                     <p>this is the truth</p> 
@@ -167,17 +171,21 @@
                               </div>   
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="row no margin">
+                    <div class="col-md-5">
+                        <div class="row">
                             <div class="myth-card">
                                 <div class="myth-card-inner">
-                                  <div class="myth-card-front">
-                                    <br>
-                                    <h1>myth 2</h1> 
-                                    <p>flip the card</p> 
-                                    <p>to see the truth</p>
-                                  </div>
-                                  <div class="myth-card-back">
+                                    <div class="myth-card-front">
+                                        <br>
+                                        <h1>Autism has a cure</h1> 
+                                        <br>
+                                        <p class="center-text">
+                                            <img class="img-myth img-responsive" src="assets/images/cure-modified.png"
+                                            alt="cure image"
+                                            aria-label="large capsule containing cure tablets">
+                                        </p>  
+                                        </div>
+                                        <div class="myth-card-back">
                                     <br>
                                     <h1>myth2</h1> 
                                     <p>this is the truth</p> 
@@ -192,19 +200,23 @@
     <!-- next 2 entries --> 
             <div class="container-fluid">
                 <div class="row no-gutters section-details">        
-                    <div class="col-lg-2">
+                    <div class="col-lg-1 col-md-1 col-sm-3">
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-md-5">
                         <div class="row">
                             <div class="myth-card">
                                 <div class="myth-card-inner">
-                                  <div class="myth-card-front">
-                                    <br>
-                                    <h1>myth 3</h1> 
-                                    <p>flip the card</p> 
-                                    <p>to see the truth</p>
-                                  </div>
-                                  <div class="myth-card-back">
+                                    <div class="myth-card-front">
+                                        <br>
+                                        <h1>Vaccines cause Autism</h1> 
+                                        <br>
+                                        <p class="center-text">
+                                            <img class="img-myth img-responsive" src="assets/images/vaccine.jpg"
+                                            alt="image of microbes"
+                                            aria-label="Multicoloured image of microbes">
+                                        </p>  
+                                        </div>
+                                        <div class="myth-card-back">
                                     <br>
                                     <h1>myth3</h1> 
                                     <p>this is the truth</p> 
@@ -214,17 +226,19 @@
                             </div>
                         </div> 
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-md-5">
                         <div class="row">
                             <div class="myth-card">
                                 <div class="myth-card-inner">
-                                  <div class="myth-card-front">
-                                    <br>
-                                    <h1>myth 4</h1> 
-                                    <p>flip the card</p> 
-                                    <p>to see the truth</p>
-                                  </div>
-                                  <div class="myth-card-back">
+                                    <div class="myth-card-front">
+                                        <br>
+                                        <h1>Autism = Learning Disability</h1> 
+                                        <p class="center-text">
+                                            <img class="img-myth img-responsive" src="assets/images/learn-disab-mod.png"
+                                            alt="learning disability"
+                                            aria-label="image of child struggling with learning">  
+                                        </div>
+                                        <div class="myth-card-back">
                                     <br>
                                     <h1>myth4</h1> 
                                     <p>this is the truth</p> 
@@ -239,19 +253,23 @@
     <!-- next 2 entries -->
             <div class="container-fluid">
                 <div class="row no-gutters section-details">        
-                    <div class="col-lg-2">
+                    <div class="col-lg-1 col-md-1 col-sm-3">
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-md-5">
                         <div class="row">
                             <div class="myth-card">
                                 <div class="myth-card-inner">
-                                  <div class="myth-card-front">
-                                    <br>
-                                    <h1>myth 5</h1> 
-                                    <p>flip the card</p> 
-                                    <p>to see the truth</p>
-                                  </div>
-                                  <div class="myth-card-back">
+                                    <div class="myth-card-front">
+                                        <br>
+                                        <h1>Autism = Savant</h1> 
+                                        <br>
+                                        <p class="center-text">
+                                            <img class="img-myth img-responsive" src="assets/images/savant.jpg"
+                                            alt="savant image"
+                                            aria-label="Mans head full of books">
+                                        </p>  
+                                        </div>
+                                        <div class="myth-card-back">
                                     <br>
                                     <h1>myth5</h1> 
                                     <p>this is the truth</p> 
@@ -261,17 +279,21 @@
                               </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-md-5">
                         <div class="row">
                             <div class="myth-card">
                                 <div class="myth-card-inner">
-                                  <div class="myth-card-front">
-                                    <br>
-                                    <h1>myth 6</h1> 
-                                    <p>flip the card</p> 
-                                    <p>to see the truth</p>
-                                  </div>
-                                  <div class="myth-card-back">
+                                    <div class="myth-card-front">
+                                        <br>
+                                        <h1>Lacking Emotion</h1> 
+                                        <br>
+                                        <p class="center-text">
+                                            <img class="img-myth img-responsive" src="assets/images/emotion-mod.png"
+                                            alt="emotion icon"
+                                            aria-label="2 adults grappling with heart and head decisions">
+                                        </p> 
+                                        </div>
+                                        <div class="myth-card-back">
                                     <br>
                                     <h1>myth6</h1> 
                                     <p>this is the truth</p> 
@@ -286,19 +308,23 @@
     <!-- next 2 entries -->
             <div class="container-fluid">
                 <div class="row no-gutters section-details">        
-                    <div class="col-lg-2">
+                    <div class="col-lg-1 col-md-1 col-sm-3">
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-md-5">
                         <div class="row">
                             <div class="myth-card">
                                 <div class="myth-card-inner">
-                                  <div class="myth-card-front">
-                                    <br>
-                                    <h1>myth 7</h1> 
-                                    <p>flip the card</p> 
-                                    <p>to see the truth</p>
-                                  </div>
-                                  <div class="myth-card-back">
+                                    <div class="myth-card-front">
+                                        <br>
+                                        <h1>It's an Epidemic</h1> 
+                                        <br>
+                                        <p class="center-text">
+                                            <img class="img-myth img-responsive" src="assets/images/graph.jpg"
+                                            alt="graph"
+                                            aria-label="graph showing meteoric rise in numbers">
+                                        </p>  
+                                        </div>
+                                        <div class="myth-card-back">
                                     <br>
                                     <h1>myth7</h1> 
                                     <p>this is the truth</p> 
@@ -308,17 +334,20 @@
                               </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-md-5">
                         <div class="row">
                             <div class="myth-card">
                                 <div class="myth-card-inner">
-                                  <div class="myth-card-front">
-                                    <br>
-                                    <h1>myth 8</h1> 
-                                    <p>flip the card</p> 
-                                    <p>to see the truth</p>
-                                  </div>
-                                  <div class="myth-card-back">
+                                    <div class="myth-card-front">
+                                        <br>
+                                        <h1>They'll Grow out of it</h1> 
+                                        <p class="center-text">
+                                            <img class="img-myth img-responsive" src="assets/images/growing-up-mod.png"
+                                            alt="image of microbes"
+                                            aria-label="Multicoloured image of microbes">
+                                        </p>  
+                                        </div>
+                                        <div class="myth-card-back">
                                     <br>
                                     <h1>myth8</h1> 
                                     <p>this is the truth</p> 
@@ -333,19 +362,23 @@
     <!-- last 2 entries -->
             <div class="container-fluid">
                 <div class="row no-gutters section-details">        
-                    <div class="col-lg-2">
+                    <div class="col-lg-1 col-md-1 col-sm-3">
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-md-5">
                         <div class="row">
                             <div class="myth-card">
                                 <div class="myth-card-inner">
-                                  <div class="myth-card-front">
-                                    <br>
-                                    <h1>myth 9</h1> 
-                                    <p>flip the card</p> 
-                                    <p>to see the truth</p>
-                                  </div>
-                                  <div class="myth-card-back">
+                                    <div class="myth-card-front">
+                                        <br>
+                                        <h1>Autism is non-verbal</h1> 
+                                        <br>
+                                        <p class="center-text">
+                                            <img class="img-myth img-responsive" src="assets/images/non-verbal.png"
+                                            alt="non verbal autism"
+                                            aria-label="small child with hand over mouth">
+                                        </p> 
+                                        </div>
+                                        <div class="myth-card-back">
                                     <br>
                                     <h1>myth 9</h1> 
                                     <p>this is the truth</p> 
@@ -355,17 +388,21 @@
                               </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-md-5">
                         <div class="row">
                             <div class="myth-card">
                                 <div class="myth-card-inner">
-                                  <div class="myth-card-front">
-                                    <br>
-                                    <h1>myth 10</h1> 
-                                    <p>flip the card</p> 
-                                    <p>to see the truth</p>
-                                  </div>
-                                  <div class="myth-card-back">
+                                    <div class="myth-card-front">
+                                        <br>
+                                        <h1>Bad parenting causes Autism</h1> 
+                                        <br>
+                                        <p class="center-text">
+                                            <img class="img-myth img-responsive" src="assets/images/badparents.jpg"
+                                            alt="bad parents"
+                                            aria-label="mother winger fagging and telling off a small child">
+                                        </p>  
+                                        </div>
+                                        <div class="myth-card-back">
                                     <br>
                                     <h1>myth10</h1> 
                                     <p>this is the truth</p> 
